<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddWorkoutActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_workout_form"
        android:layout_width="wrap_content"
        android:layout_height="695dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/start_workout_button"
        app:layout_constraintTop_toTopOf="@+id/start_workout_button">


        <EditText
            android:id="@+id/timer"
            android:layout_width="354dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:gravity="center"
            android:hint="00:00"
            android:inputType="time"
            android:textSize="100dp"
            app:layout_constraintBottom_toTopOf="@+id/workout_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/workout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:hint="Workout Name"
            app:layout_constraintBottom_toTopOf="@+id/workout_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <EditText
            android:id="@+id/workout_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:hint="Type of workout"
            app:layout_constraintBottom_toTopOf="@+id/start_workout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_name" />

        <Button
            android:id="@+id/start_workout_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_buttons"
            android:text="@string/start_workout_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pause_workout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_type" />

        <Button
            android:id="@+id/stop_workout_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="167dp"
            android:background="@drawable/round_buttons"
            android:text="@string/stop_workout_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pause_workout_button" />

        <Button
            android:id="@+id/pause_workout_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_buttons"
            android:text="@string/pause_workout_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/stop_workout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_workout_button" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>